2008-09-04  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/viewer.py:
	Call gtk.gdk.display_get_default().sync() before the initial call to
	set_xwindow_id().
	Fixes #334631  ... hopefully FOR EVER !

2008-08-25  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/elements/imagefreeze.py:
	Rewrite imagefreeze seeking/output.
	Now uses a gst.Task for outputting and proper seeking handling.

2008-08-25  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/timeline/source.py:
	Fix description

2008-08-25  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/elements/Makefile.am:
	* pitivi/elements/imagefreeze.py:
	New image-to-video element. Still needs more testing before being
	usable in a timeline.

2008-07-28  Brandon Lewis  <brandon_lewis@berkeley.edu>

	* pitivi/ui/complextimeline.py:
	Proper cliping of labels on timeline objects.

2008-07-28  Brandon Lewis  <brandon_lewis@berkeley.edu>

	* pitivi/ui/complextimeline.py:
	when splitting clips, setMediaStartDuration is called before
	setStartDuration.
	zoom controls now use discrete zoom values specified in list

2008-07-26  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/ruler.py:
	Fix ruler redraw again :) This time redraws as little as possible by
	only forcing the redraw of the old and new curser position instead of
	the whole area between the two.

2008-07-25  Brandon Lewis  <brandon_lewis@berkeley.edu>

	* pitivi/ui/ruler.py:
	rewrote drawRuler() to be a bit more intelligent about how it
	determines line spacing and where to place text. added
	min_tick_spacing property to control when ticks should become visible.
	Softened the appearence of the tick lines by setting their color to
	dark gray value.

2008-07-25  Brandon Lewis  <brandon_lewis@berkeley.edu>

	* pitivi/ui/complextimeline.py:
	fixed subtle misalignment between ruler and timeline
	* pitivi/ui/ruler.py:
	set ruler border property to 0

2008-07-25  Brandon Lewis  <brandon_lewis@berkeley.edu>
